<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/page0"
            android:icon="@drawable/ic_menu_icon"
            android:title="@string/manu" />
        <item
            android:id="@+id/page1"
            android:icon="@drawable/ic_menu_lecture"
            android:title="@string/shalke04" />
        <item
            android:id="@+id/page2"
            android:icon="@drawable/ic_menu_lecture"
            android:title="@string/bayern" />
        <item
            android:id="@+id/page3"
            android:icon="@drawable/ic_menu_lecture"
            android:title="@string/facts" />
    </group>

    <item android:title="@string/read">
        <menu>
            <item
                android:id="@+id/nav_view1"
                android:icon="@drawable/ic_menu_internet"
                android:title="@string/next_matches" />
        </menu>
    </item>

    <item android:title="@string/connection">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_review"
                android:title="@string/review" />
        </menu>
    </item>

</menu>
